# rest/get_cart_validate.go
@@ -8,18 +8,18 @@ import (
 	"github.com/nmarsollier/cartgo/service"
 )
 
-// @Summary		Validar Carrito
-// @Description	Valida el carrito para checkout
-// @Tags			Cart
-// @Accept			json
-// @Produce		json
-// @Param			Authorization	header	string	true	"bearer {token}"
-// @Success		200				"No Content"
-// @Failure		400				{object}	apperr.ValidationErr	"Bad Request"
-// @Failure		401				{object}	engine.ErrorData		"Unauthorized"
-// @Failure		404				{object}	engine.ErrorData		"Not Found"
-// @Failure		500				{object}	engine.ErrorData		"Internal Server Error"
-// @Router			/v1/cart/validate [get]
+//	@Summary		Validar Carrito
+//	@Description	Valida el carrito para checkout
+//	@Tags			Cart
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header	string	true	"bearer {token}"
+//	@Success		200				"No Content"
+//	@Failure		400				{object}	errs.ValidationErr	"Bad Request"
+//	@Failure		401				{object}	engine.ErrorData	"Unauthorized"
+//	@Failure		404				{object}	engine.ErrorData	"Not Found"
+//	@Failure		500				{object}	engine.ErrorData	"Internal Server Error"
+//	@Router			/v1/cart/validate [get]
 //
 // Valida el carrito para checkout.
 func initGetCartValidate() {
